@@ -1,5 +1,10 @@
 2004-05-20  David Schleef  <ds@schleef.org>
 
+	* configure.ac:
+	* sys/Makefile.am:
+
+2004-05-20  David Schleef  <ds@schleef.org>
+
 	* sys/osxaudio/Makefile.am:  New OS X audio plugin by Zaheer Merali
 	* sys/osxaudio/gstosxaudio.c:
 	* sys/osxaudio/gstosxaudioelement.c:
